--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -51,7 +51,8 @@ on:
 #  pull_request:
 
 permissions:
-  contents: read
+  id-token: write # This is required for requesting the JWT
+  contents: read  # This is required for actions/checkout
 
 jobs:
   terraform:
@@ -73,8 +74,7 @@ jobs:
     - name: Configure AWS credentials
       uses: aws-actions/configure-aws-credentials@v2
       with:
-        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        role-to-assume: arn:aws:iam::687740903411:role/GithubAccess
         aws-region: ap-southeast-2
 
     # Install the latest version of Terraform CLI and configure the Terraform CLI configuration file with a Terraform Cloud user API token
@@ -94,15 +94,9 @@ jobs:
     # Generates an execution plan for Terraform
     - name: Terraform Plan
       run: terraform plan -input=false
-      env:
-        TF_VAR_access_key: ${{ secrets.AWS_ACCESS_KEY_ID }}
-        TF_VAR_secret_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
 
       # On push to "main", build or change infrastructure according to Terraform configuration files.
       # Note: It is recommended to set up a required "strict" status check in your repository for "Terraform Cloud". See the documentation on "strict" required status checks for more information: https://help.github.com/en/github/administering-a-repository/types-of-required-status-checks
     - name: Terraform Apply
       if: github.ref == 'refs/heads/"main"' && github.event_name == 'push'
       run: terraform apply -auto-approve -input=false
-      env:
-        TF_VAR_access_key: ${{ secrets.AWS_ACCESS_KEY_ID }}
-        TF_VAR_secret_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
